# inih

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  ini.c  ini.h  inih.pc.in  meson.build  meson_options.txt  release.sh
.github/workflows/: ci.yml  tests.yml
examples/: CMakeLists.txt  ini_dump.c  ini_example.c  ini_xmacros.c  meson.build  test.ini
fuzzing/: inihfuzz.c
tests/: CMakeLists.txt  baseline_allow_no_value.txt  baseline_call_handler_on_new_section.txt  baseline_handler_lineno.txt  baseline_heap_realloc_max_line.txt  baseline_multi.txt  baseline_multi_max_line.txt  baseline_stop_on_first_error.txt  baseline_string.txt  meson.build  normal.ini  unittest.bat  unittest.c  unittest.sh  unittest_alloc.c  unittest_string.c
