option('distro_install',
  type : 'boolean',
  value : true,
  description : 'install shared libs, headers and pkg-config entries'
)
option('examples',
  type : 'boolean',
  value : false,
  description : 'build the example programs'
)
option('utf-8_bom',
  type : 'boolean',
  value : true,
  description : 'allow a UTF-8 BOM sequence (0xEF 0xBB 0xBF) at the start of INI files'
)
option('start-of-line_comment_prefix',
  type : 'string',
  value : ';#',
  description : 'character(s) to start a comment at the beginning of a line'
)
option('allow_no_value',
  type : 'boolean',
  value : false,
  description : 'allow name with no value'
)
option('stop_on_first_error',
  type : 'boolean',
  value : false,
  description : 'stop parsing after an error'
)
option('report_line_numbers',
  type : 'boolean',
  value : false,
  description : 'report line number on ini_handler callback'
)
option('call_handler_on_new_section',
  type : 'boolean',
  value : false,
  description : 'call the handler each time a new section is encountered'
)
option('tests',
  type : 'boolean',
  value : true,
  description : 'build the test suite (noisy)'
)
