option('distro_install',
  type : 'boolean',
  value : true,
  description : 'install shared libs, headers and pkg-config entries'
)
option('examples',
  type : 'boolean',
  value : false,
  description : 'build the example programs'
)
option('tests',
  type : 'boolean',
  value : true,
  description : 'build the test suite (noisy)'
)
